<resources>
    <string name="app_name">PruebaLuckyMovil</string>
    <string name="titulo_splash">APP GESTOR</string>
    <string name="subtitulo_splash">Xplora</string>
    <string name="subtitulo_bajo_splash">v.2.0.0</string>
    <string name="hint_userName">Nombre de Usuario</string>
    <string name="hint_passUser">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="hint_nombre">Nombres</string>
    <string name="hint_apellido">Apellidos</string>
    <string name="hint_email">Email</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_date">Fecha de Nacimiento</string>
    <string name="btn_crearUsuario">Registrarme</string>
    <string name="pregunta_create_account">¿Aun no tienes cuenta?</string>
    <string name="register_message">Registrate Aqui</string>
    <string name="toolbar_title_createAccount">Crear cuenta</string>
    <string name="title_activity_recursos">RecursosActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>