<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_login"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_splash"
        android:textAlignment="center"
        android:layout_marginTop="75dp"
        android:textSize="@dimen/titulo_splash_padding" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_splash"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/subtitulo_splash_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/subtitulo_bajo_splash"
        android:textAlignment="center"
        android:textSize="@dimen/subtitulo_bajo_splash_padding"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!--envoltorio-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_userName"


            />
        <!--contenido-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passUser"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_ingresar"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:strokeColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/message_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_create_account"
            />

        <TextView
            android:id="@+id/tvRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_message"
            android:layout_marginLeft="@dimen/registrate_margin"
            android:textStyle="bold"
            />

    </LinearLayout>


</LinearLayout>