<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/create_account_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--NOMBRES-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTexBlack"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editText_margin_createAccount"
                    android:hint="@string/hint_nombre"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--APELLIDOS-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTexBlack"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editText_margin_bajo_createAccount"
                    android:hint="@string/hint_apellido"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTexBlack"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editText_margin_bajo_createAccount"
                    android:hint="@string/hint_email"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTexBlack"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editText_margin_bajo_createAccount"
                    android:hint="@string/hint_contraseña"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/btn_crearUsuario"
                android:textColor="@color/black"
                app:cornerRadius="5dp"
                app:strokeColor="@color/black" />


        </LinearLayout>



    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>